# geosot-rs

./: .gitignore  Cargo.toml  README.md  README_PYTHON.md  pyproject.toml  release.sh
.github/workflows/: maturin.yml  python-package-conda.yml
examples/: demo.rs  spatial_demo.rs
src/: lib.rs  spatial.rs  utils.rs
tests/: spatial_test.rs  test_geosot.py  test_spatial.py
