[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[project]
name = "geosot"
version = "0.1.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
